# SecureFileTransfer

./: .gitignore  CMakeLists.txt  README.md
include/: Config.hpp  Crypto.hpp  Network.hpp  Protocol.hpp  Utils.hpp  sha256_bcrypt.hpp
received/: sample.txt
src/: Client.cpp  Crypto.cpp  CryptoTest.cpp  Network.cpp  Protocol.cpp  Server.cpp  Utils.cpp  sha256_bcrypt.cpp
